# Mango-Vesta

./: AnalyticalBinaryJLP.py  AnalyticalJLP.py  AnalyticalVanillaJLP.py  CoinGeckoExample.json  Hedger.py  NumericalJLP.py  Output.csv  README.md  Vanilla.csv  VanillaVersion.csv  chai.py  getSlippage.py  mango.py  new.csv  package-lock.json  priceJLT.py  pyproject.toml  rankings.csv  setup.py
archive/: AnalyticalVanillaJLP.py
vesta/: __init__.py  coingeckoids.json  constants.py  main.py  rankings.py  types.py
vesta/data/: __init__.py  coingecko.py  data.py  ethplorer.py  jupiter.py  moralis.py  pythpy.py
vesta/exceptions/: exceptions.py
vesta/functions/: functions.py
vesta/pricing/: __init__.py  analytical.py  optimisers.py  processes.py  risk.py
vesta/token/: token.py
vesta/tokenfactors/: ethtokenfactors.py  tokenfactors.py
vesta/utils/: utils.py
