[tool.poetry]
name = "vesta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.26.4"
pandas = "^2.2.0"
scipy = "^1.12.0"
web3 = "^6.15.1"
matplotlib = "^3.8.2"
pyarrow = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
